# TFG

./: .gitignore
demo/: comandos.txt  frames_2025-11-15_09.49.16.gv  gait_joints_log.txt  phases.json
demo/src/: CMakeLists.txt  package.xml
demo/src/config/: ros.yaml  ros2_control.yaml
demo/src/control/include/: Body.hpp  Enums.hpp  Gaits.hpp  Horizontal_controller.hpp  JointPubNode.hpp  Kinematics.hpp  Leg.hpp  MamdaniFuzzy.hpp  Planner.hpp  Saturation.hpp  Set.hpp  keyboard_cmd_parser.hpp
demo/src/control/src/: Body.cpp  Gaits.cpp  Horizontal_controller.cpp  JointPubNode.cpp  Kinematics.cpp  Leg.cpp  MamdaniFuzzy.cpp  Planner.cpp  Set.cpp  keyboard_cmd_parser.cpp  main.cpp  main_2.cpp  main_3.cpp  main_F.cpp  main_trot.cpp
demo/src/control_OG/include/: Body.hpp  Enums.hpp  Gaits.hpp  Horizontal_controller.hpp  Kinematics.hpp  Leg.hpp  MamdaniFuzzy.hpp  Planner.hpp  Saturation.hpp
demo/src/control_OG/src/: Body.cpp  Gaits.cpp  Horizontal_controller.cpp  Kinematics.cpp  Leg.cpp  Planner.cpp  main_OLD.cpp
demo/src/interfaz/: Adjustment_buttons.pde  Button_state.pde  CalibrationScreen.pde  KnobArray.pde  Leg.pde  LegActuators.pde  Leg_calibration.pde  LimitsScreen.pde  MainScreen.pde  Robot.pde  Robot_interface.pde  SaturationSlider.pde  Screen.pde  Serial_parser.pde  Telemetria.pde  Top_view.pde  sketch.properties
demo/src/interfaz/data/: 4LBOT_4axis_and_height  4LBOT_xbox_controller
demo/src/keyboard_cmd/: cmd  sender.c
demo/src/launch/: gazebo.launch.py  rviz.launch.py
demo/src/meshes/: FL_Antebrazo.stl  FL_Brazo.stl  FL_Hombro.stl  FR_Antebrazo.stl  FR_Brazo.stl  FR_Hombro.stl  RL_Antebrazo.stl  RL_Brazo.stl  RL_Hombro.stl  RR_Antebrazo.stl  RR_Brazo.stl  RR_Hombro.stl  base_link.stl
demo/src/scripts/: entitypose_to_odom.py  move_all_joints.py  walk.py  walk1.py
demo/src/urdf/: robot.xacro.urdf  robot1.xacro.urdf
demo/src/worlds/: demo.sdf  empty.sdf
demo/src/worlds/models/cones/: model.sdf
demo/src/worlds/models/cones/meshes/: construction_cone.dae
demo/src/worlds/models/quadruped_stage/: model.config  model.sdf
demo/src/worlds/models/quadruped_stage/meshes/: spot_stage.dae  spot_stage.stl
robot_description/: package.xml
robot_quadruped/src/robot_controller/: CMakeLists.txt  package.xml
robot_quadruped/src/robot_controller/include/robot_controller/: Body.hpp  Kinematics.hpp  Leg.hpp  Planner.hpp  RestController.hpp  RobotController.hpp
robot_quadruped/src/robot_controller/launch/: robot_controller.launch.py
robot_quadruped/src/robot_controller/src/: main.cpp
robot_quadruped/src/robot_description/: CMakeLists.txt  package.xml
robot_quadruped/src/robot_description/config/: controller.yaml  ros2_control.yaml
robot_quadruped/src/robot_description/launch/: publish_urdf.launch.py  rviz.launch.py
robot_quadruped/src/robot_description/meshes/: FL_Brazo.stl  FR_Antebrazo.stl  FR_Hombro_1.stl  RL_Antebrazo.stl  RL_Brazo.stl  RL_Hombro_1.stl  RR_Antebrazo.stl  RR_Hombro_1.stl
robot_quadruped/src/robot_description/urdf/: robot.gazebo  robot.trans  robot.urdf  robot.xacro
robot_quadruped/src/robot_gazebo/: CMakeLists.txt  package.xml
robot_quadruped/src/robot_gazebo/launch/: gazebo.launch.py  spawn_robot_description.launch.py  spawn_robot_ros.launch.xml
robot_quadruped/src/robot_gazebo/models/city_terrain/: city_terrain.sdf
robot_quadruped/src/robot_gazebo/models/materials/scripts/: gazebo.material
robot_quadruped/src/robot_gazebo/models/skate_park/: skate_park.sdf
robot_quadruped/src/robot_gazebo/models/skate_park/materials/scripts/: skate_park.material
robot_quadruped/src/robot_gazebo/worlds/: demo.sdf  empty.sdf  empty.world
src/robot_description/: package.xml
